fix text wrap issue maybe

--- a/home.css
+++ b/home.css
@@ -64,7 +64,7 @@ h3 span {
 	letter-spacing: 2px;
 	font-size: 14px;
 	font-family: Prime-Regular, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
-	max-width: 180px;
+	max-width: 65%;
 }
 
 p {
